GameVersion.getId is better